[package]
name = "composable_query_builder"
version = "0.1.0"
edition = "2021"

[lib]
path = "src/lib.rs"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
chrono = { version = "0.4.26", features = ["serde"] }
itertools = "0.11.0"
sqlx = { version = "0.7.0", features = ["runtime-tokio-native-tls", "postgres", "chrono", "time"] }

